--- a/languages/en.lang
+++ b/languages/en.lang
@@ -211,6 +211,9 @@ $PALANG['pViewlog_data'] = 'Data';
 $PALANG['pViewlog_action_create_domain'] = 'create domain';
 $PALANG['pViewlog_action_delete_domain'] = 'delete domain';
 $PALANG['pViewlog_action_edit_domain'] = 'edit domain';
+$PALANG['pViewlog_action_create_server'] = 'create server';
+$PALANG['pViewlog_action_delete_server'] = 'delete server';
+$PALANG['pViewlog_action_edit_server'] = 'edit server';
 $PALANG['pViewlog_action_create_mailbox'] = 'create mailbox';
 $PALANG['pViewlog_action_delete_mailbox'] = 'delete mailbox';
 $PALANG['pViewlog_action_edit_mailbox'] = 'edit mailbox';
@@ -287,6 +290,7 @@ $PALANG['pAdminEdit_domain_maxquota'] = 'Max Mailbox Quota'; # TODO: add change 
 $PALANG['pAdminEdit_domain_maxquota_text'] = 'MB | -1 = disable | 0 = unlimited';
 $PALANG['pAdminEdit_domain_quota'] = 'Domain Quota';
 $PALANG['transport'] = 'Transport';
+$PALANG['pAdminEdit_domain_primarymx_text'] = 'Define the primary MX';
 $PALANG['pAdminEdit_domain_transport_text'] = 'Define transport';
 $PALANG['pAdminEdit_domain_backupmx'] = 'Mail server is backup MX';
 $PALANG['pAdminEdit_domain_result_error'] = 'Modifying the domain %s failed!';
@@ -416,6 +420,16 @@ $PALANG['dateformat_pgsql'] = 'YYYY-mm-dd'; # translators: rearrange to your loc
 $PALANG['dateformat_mysql'] = '%Y-%m-%d';   # translators: rearrange to your local date format, but make sure it's a valid MySQL date format
 $PALANG['password_expiration'] = 'Pass expires';
 $PALANG['password_expiration_desc'] = 'Date when password will expire';
+
+$PALANG['pAdminMenu_list_sever'] = 'Server list';
+$PALANG['pAdminMenu_create_server'] = 'New Server';
+$PALANG['server'] = 'Server';
+$PALANG['smtpaddress'] = 'SMTP-Address';
+$PALANG['server_address_description'] = 'smtp address of the remote server for relaying (e.g. smtp:[10.0.0.5]:25 )';
+$PALANG['server_creation'] = 'Add a server';
+$PALANG['server_edit'] = 'Edit a server';
+$PALANG['server_button'] = 'Add server';
+$PALANG['primarymx'] = 'Primary MX';
 
 $PALANG['please_keep_this_as_last_entry'] = ''; # needed for language-check.sh
 /* vim: set expandtab ft=php softtabstop=3 tabstop=3 shiftwidth=3: */
